--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -55,52 +55,66 @@
   
   checkInInput.min = new Date().toLocaleDateString('fr-ca')
   checkInInput.value = new Date().toLocaleDateString('fr-ca')
+
+  const checkInDate = new Date(this.value);
+  const checkOutDate = new Date(checkInDate);
+  checkOutDate.setDate(checkOutDate.getDate() + 1); // Default to 1 night stay
+
+  const year = checkOutDate.getFullYear();
+  const month = String(checkOutDate.getMonth() + 1).padStart(2, '0');
+  const day = String(checkOutDate.getDate()).padStart(2, '0');
+
+  checkOutInput.value = `${year}-${month}-${day}`;
+  checkOutInput.min = `${year}-${month}-${day}`;
   
 
   checkInInput.addEventListener('change', function() {
     const checkInDate = new Date(this.value);
     const checkOutDate = new Date(checkInDate);
-    checkOutDate.setDate(checkOutDate.getDate() + 1); // Default to 1 night stay
+    
 
+    checkOutDate.setDate(checkOutDate.getDate() + 1); // Default to 1 night stay
+    
     const year = checkOutDate.getFullYear();
     const month = String(checkOutDate.getMonth() + 1).padStart(2, '0');
     const day = String(checkOutDate.getDate()).padStart(2, '0');
-
+    
     checkOutInput.value = `${year}-${month}-${day}`;
+    checkOutInput.min = `${year}-${month}-${day}`;
   });
 
 
 console.log(bookingButton,inputs,'look here');
 
 
-function updatelink() {
+function updateLink() {
 console.log(bookingButton,inputs);
 
-    const checkInDate = checkInInput.value.split('-');
-    const checkOutDate = checkOutInput.value.split('-');
+    let checkInDate = checkInInput.value.split('-');
+    let checkOutDate = checkOutInput.value.split('-');
 
     
-    const roomCountInput = document.getElementById('room-count');
-    const roomCount = roomCountInput.value;
+    let roomCountInput = document.getElementById('room-count');
+    let roomCount = roomCountInput.value;
 
-    const adultCountInput = document.getElementById('adult-count');
-    const adultCount = adultCountInput.value;
+    let adultCountInput = document.getElementById('adult-count');
+    let adultCount = adultCountInput.value;
 
-    const childrenCountInput = document.getElementById('children-count');
-    const childrenCount = childrenCountInput.value;
+    let childrenCountInput = document.getElementById('children-count');
+    let childrenCount = childrenCountInput.value;
 
     bookingButton.href = `
-    https://www.ihg.com/regent/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qSlH=DPSCR&qRms=${ roomCount }&qAdlt=${ adultCount }&qChld=${ childrenCount }&qCiD=${ checkInDate[2] }&qCiMy=${ checkInDate[1] }/${ checkInDate[0] }&qCoD=${ checkOutDate[2] }&qCoMy=${ checkOutDate[1] }/${ checkOutDate[0] }&qAAR=6CBARC&qRtP=6CBARC&setPMCookies=true&qSHBrC=RE&qDest=Jl.%20Pantai%20Batu%20Bolong%20B%20No.%2093xx,%20Bali,%20ID&srb_u=1&qRmFltr=`
+    https://www.ihg.com/regent/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qSlH=DPSCR&qRms=${ roomCount }&qAdlt=${ adultCount }&qChld=${ childrenCount }&qCiD=${ checkInDate[2] }&qCiMy=${ checkInDate[1] }${ checkInDate[0] }&qCoD=${ checkOutDate[2] }&qCoMy=${ checkOutDate[1] }${ checkOutDate[0] }&qAAR=6CBARC&qRtP=6CBARC&setPMCookies=true&qSHBrC=RE&qDest=Jl.%20Pantai%20Batu%20Bolong%20B%20No.%2093xx,%20Bali,%20ID&srb_u=1&qRmFltr=`
 
 }
 
 inputs.forEach(input => {
   
-  input.addEventListener('change', updatelink);
+  input.addEventListener('change', updateLink);
 
 })
 
-updatelink();
+updateLink();
 
 
 </script>
