--- a/_includes/block/grid-simple-2-col-overlap.html
+++ b/_includes/block/grid-simple-2-col-overlap.html
@@ -15,7 +15,7 @@
                   <img class="h-full w-[80%] lg:w-[120%] lg:max-w-[120%] object-cover absolute top-0 {% if block.desktop-image-position == 'right' %} right-0 xl:right-side {% else %}  xl:left-side {% endif %} bottom-0" src="{{block.image}}" alt="{{block.image-alt}}">
                 </div>
               </div>
-               <div class="scheme-{{block.text-column.color-scheme}} bottom-ver {% if block.desktop-image-position == 'left' %} right-side {% else %} left-side {% endif %} absolute w-[calc(40vw_-_var(--side-gap))] lg:w-full lg:relative z-10 self-end">
+               <div class="scheme-{{block.text-column.color-scheme}} bottom-ver {% if block.desktop-image-position == 'left' %} right-side {% else %} left-side {% endif %} absolute w-[calc(80vw_-_var(--side-gap))] md:w-[calc(40vw_-_var(--side-gap))] lg:w-full lg:relative z-10 self-end">
                 <div class="bg-base p-8">
                   {{block.text-column.block-content-html}}
                 </div>
