--- a/_includes/block/slider-split-banner.html
+++ b/_includes/block/slider-split-banner.html
@@ -27,7 +27,7 @@
 
               <picture >
                 <source srcset="{{col.background-desktop-image}}" media="(min-width: 750px)" />
-                <img class="{% unless block.img_aspect == 'Original' %} absolute inset-0 h-full w-full object-cover object-center {% endunless %}" src="{{col.background-mobile-image}}" alt="{{col.background-alt}}"loading="lazy" />
+                <img class="{% unless block.img_aspect == 'Original' %} absolute inset-0 h-full w-full object-cover {% endunless %}" src="{{col.background-mobile-image}}" style="object-position: {{col.image-focus-point.percent-from-left}}% {{col.image-focus-point.percent-from-top}}%;" alt="{{col.background-alt}}"loading="lazy" />
               </picture>
             </div>
             
