--- a/_includes/block/events-block.html
+++ b/_includes/block/events-block.html
@@ -6,7 +6,7 @@
               <h2 class="large-heading mb-16">{{block.heading}}</h2>
               <p> {{block.description}}</p>
           </div>
-          <div class="grid grid-cols-12 mb-12">
+          <!-- <div class="grid grid-cols-12 mb-12">
             {% for event in block.events | limit:1 %}
             <div class="col-span-7 relative" style="aspect-ratio: 216/263;">
               <img src="{{event.featured-image}}" alt="" class="bg-cover-image">
@@ -35,7 +35,7 @@
               </div>
             </div>
             {% endfor  %}
-          </div>
+          </div> -->
       </div>
     </section>
 
