--- a/_includes/block/newsletter-form.html
+++ b/_includes/block/newsletter-form.html
@@ -17,7 +17,7 @@
               <input type="text"placeholder="Last Name" name="lastName" id="last-name" class="p-2 border bg-base !border-gray-400 border-r-0 block">
               <input type="text" placeholder="Email Address" name="email" id="email" class="p-2 border bg-base !border-gray-400 border-r-0 block">
               <div class="scheme-dark">
-                <button type="submit" class="p-2 border bg-base w-full">Sign Me Up !</button>
+                <button type="submit" class="p-2 border bg-base w-full">Stay Connected</button>
                 <!-- <input type="submit" value="Stay Connected" class="p-2 border bg-base"> -->
               </div>
               <label for="consent" class="md:col-span-4 text-sm flex justify-center gap-2">
