--- a/_includes/block/newsletter-form.html
+++ b/_includes/block/newsletter-form.html
@@ -21,7 +21,7 @@
                 <!-- <input type="submit" value="Stay Connected" class="p-2 border bg-base"> -->
               </div>
               <label for="consent" class="md:col-span-4 text-sm flex justify-center gap-2">
-                <input type="checkbox" name="consent" id="consent" class="inline w-auto" required> Regent has permission to send me emails.
+                <input type="checkbox" name="consent" id="consent" class="inline w-auto" required> Yes, I would like to receive emails with exclusive specials & offers
               </label>
 
             </form>
