--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="pb-12">
-          <img class="w-full" src="/uploads/footer-placeholder.png" alt="">
+          <img class="w-full" src="/uploads/regent-footer.jpg" alt="">
         </div>
         <div class="flex justify-center gap-4">
           {% for sublink in site.data.navigation.footer-sub-links %}
@@ -37,7 +37,7 @@
         </div>
         <div class="text-center engravers-gothic">
           <p>
-            THIS HOTEL IS OWNED BY AS PART OF IHG HOTEL GROUP, ALL RIGHTS RESERVED.  
+            THIS HOTEL IS PART OF IHG HOTELS & RESORTS, ALL RIGHTS RESERVED.
           </p>
         </div>
       </div>
