--- a/_includes/block/wave-grid.html
+++ b/_includes/block/wave-grid.html
@@ -23,7 +23,7 @@
                 {{cell.description}}
               </p>
               <p class="text-right">
-                <a href="{{cell.button.link}}" class="inline-block button uppercase " style="background-color: #D5E3DD; border-color: #D5E3DD;">{{cell.button.text}}</a>
+                <a href="{{cell.button.url}}" class="inline-block button uppercase " style="background-color: #D5E3DD; border-color: #D5E3DD;">{{cell.button.text}}</a>
               </p>
             </div>
             {% endfor %}
