--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,6 +481,9 @@ video {
 .inset-0 {
   inset: 0px;
 }
+.-bottom-40 {
+  bottom: -10rem;
+}
 .-top-12 {
   top: -3rem;
 }
@@ -599,6 +602,10 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.mx-side {
+  margin-left: var(--side-gap);
+  margin-right: var(--side-gap);
 }
 .my-0 {
   margin-top: 0px;
@@ -741,6 +748,9 @@ video {
 }
 .w-4\/5 {
   width: 80%;
+}
+.w-\[14rem\] {
+  width: 14rem;
 }
 .w-\[80\%\] {
   width: 80%;
@@ -957,6 +967,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -984,6 +998,9 @@ video {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-6 {
+  padding: 1.5rem;
 }
 .p-8 {
   padding: 2rem;
