--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,9 @@ video {
 .-top-2 {
   top: -0.5rem;
 }
+.-top-4 {
+  top: -1rem;
+}
 .bottom-0 {
   bottom: 0px;
 }
@@ -504,6 +507,9 @@ video {
 }
 .left-0 {
   left: 0px;
+}
+.left-12 {
+  left: 3rem;
 }
 .left-\[5\%\] {
   left: 5%;
@@ -531,6 +537,15 @@ video {
 }
 .top-4 {
   top: 1rem;
+}
+.-top-8 {
+  top: -2rem;
+}
+.-bottom-8 {
+  bottom: -2rem;
+}
+.right-12 {
+  right: 3rem;
 }
 .-z-10 {
   z-index: -10;
