--- a/_includes/popup-code.html
+++ b/_includes/popup-code.html
@@ -70,7 +70,7 @@ opacity: .6;
             <p class="text-center">We use cookies to enhance your experience on our website. By continuing to browse, you agree to our use of cookies.</p>
             <div class="flex justify-center gap-8">
                 <span class="button accept w-[14rem]">Accept all</span>
-                <a href="/cookie" class="button learn w-[14rem]">Learn more</a>
+                <a href="/cookie-policy" class="button learn w-[14rem]">Learn more</a>
             </div>
         </div>
     </div>
