--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
             {% endfor %}
             
             <div class="absolute -bottom-8 right-12 color-set p-4">
-              <a href="https://www.ihg.com/onerewards/content/us/en/home">
+              <a href="https://www.ihg.com/onerewards/content/us/en/home" target="_blank">
                 <img src="/uploads/footer-logos/logos-onerewards.svg" alt="IHG hotels and resorts" style="width:12rem">
               </a>
             </div>
@@ -70,12 +70,12 @@
 
   <style>
     .footer-logo-grid {
-      grid-template-columns: 82px 94px 202px 125px 113px 110px 83px 77px 102px 101px;
-      width: 90.3rem;
+      grid-template-columns: 73px 84px 182px 112px 96px 94px 72px 66px 90px 101px;
+      width: 1351px;
       margin: auto;
     }
 
-    @media (max-width: 1600px) {
+    @media (max-width: 1499px) {
       .footer-logo-grid {
         grid-template-columns: 110px 94px 202px 125px 113px;
       width: 52.3rem;
