--- a/_includes/popup-code.html
+++ b/_includes/popup-code.html
@@ -67,7 +67,7 @@ opacity: .6;
 <div id="cookie-consent-popup" class="cookie-consent-popup fixed -bottom-40 left-0 transform bg-white transition-all border border-black p-6 w-full z-50">
     <div class="cookie-consent-content mx-side">
         <div class="cookie-consent-text">
-            <p class="text-center">We use cookies to enhance your experience on our website. By continuing to browse, you agree to our use of cookies.</p>
+            <p class="text-center">We use cookies to enhance your browsing experience, personalize content, and measure the effectiveness of our advertising. By clicking “Allow All,” you consent to our use of cookies.</p>
             <div class="flex justify-center gap-8">
                 <span class="button accept w-[14rem]">Accept all</span>
                 <a href="/cookie-policy" class="button learn w-[14rem]">Learn more</a>
@@ -76,7 +76,7 @@ opacity: .6;
     </div>
 </div>
 
-
+<!-- https://www.ihg.com.cn/redirect?path=asearch&brandCode=RE&localeCode=en&regionCode=1&hotelCode=DPSCR&checkInDate=26&checkInMonthYear=112025&checkOutDate=28&checkOutMonthYear=112025&rateCode=IGCOR&_PMID=99502222&cn=yes -->
 
 <script>
     function createCookie(name,value,days) {
