--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -104,7 +104,7 @@ console.log(bookingButton,inputs);
     let childrenCount = childrenCountInput.value;
 
     bookingButton.href = `
-    https://www.ihg.com/regent/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qSlH=DPSCR&qRms=${ roomCount }&qAdlt=${ adultCount }&qChld=${ childrenCount }&qCiD=${ checkInDate[2] }&qCiMy=${ checkInDate[1] }${ checkInDate[0] }&qCoD=${ checkOutDate[2] }&qCoMy=${ checkOutDate[1] }${ checkOutDate[0] }&qAAR=6CBARC&qRtP=6CBARC&setPMCookies=true&qSHBrC=RE&qDest=Jl.%20Pantai%20Batu%20Bolong%20B%20No.%2093xx,%20Bali,%20ID&srb_u=1&qRmFltr=`
+    https://www.ihg.com/regent/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qSlH=DPSCR&qRms=${ roomCount }&qAdlt=${ adultCount }&qChld=${ childrenCount }&qCiD=${ checkInDate[2] }&qCiMy=${ checkInDate[1] }${ checkInDate[0] }&qCoD=${ checkOutDate[2] }&qCoMy=${ checkOutDate[1] }${ checkOutDate[0] }&qAAR=6CBARC&qRtP=6CBARC&setPMCookies=true&qSHBrC=RE&qDest=Jl.%20Pantai%20Batu%20Bolong%20B%20No.%2093xx,%20Bali,%20ID&_PMID=99502222&srb_u=1&qRmFltr=`
 
 }
 
