--- a/_includes/popup-code.html
+++ b/_includes/popup-code.html
@@ -68,9 +68,9 @@ opacity: .6;
     <div class="cookie-consent-content mx-side">
         <div class="cookie-consent-text">
             <p class="text-center">We use cookies to enhance your browsing experience, personalize content, and measure the effectiveness of our advertising. By clicking “Allow All,” you consent to our use of cookies.</p>
-            <div class="flex justify-center gap-8">
-                <span class="button accept w-[14rem]">Accept all</span>
-                <a href="/cookie-policy" class="button learn w-[14rem]">Learn more</a>
+            <div class="flex flex-wrap justify-center gap-x-8 gap-y-4">
+                <span class="button accept w-[14rem] text-center">Accept all</span>
+                <a href="/cookie-policy" class="button learn w-[14rem] text-center">Learn more</a>
             </div>
         </div>
     </div>
