split banner gap

--- a/_includes/block/slider-split-banner.html
+++ b/_includes/block/slider-split-banner.html
@@ -20,7 +20,7 @@
     <div class="split-banner-slider relative mb-4 scheme-base">
       {% for col in block.slider %}
       <div class="split-banner-slider-content absolute bg-base">
-        <div class="grid md:grid-cols-5 overflow-hidden " style="gap: {{site.data.style.split_banner_gap}}">
+        <div class="grid md:grid-cols-5 overflow-hidden" style="column-gap: {{site.data.style.split_banner_gap}}">
           
           <div class="picture relative  md:col-span-3">
             <div style="aspect-ratio: 5/4;">
