gem and link clean up

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="text-center">
-          <a href="[https://www.ihg.com/content/us/en/customer-care/lowest-internet-rate-terms-conditions](https://www.ihg.com/content/us/en/customer-care/lowest-internet-rate-terms-conditions)" target="_blank">
+          <a href="https://www.ihg.com/content/us/en/customer-care/lowest-internet-rate-terms-conditions" target="_blank">
             <img src="/uploads/best-price-guarantee.png" alt="Best price guarantee" style="width: 100px;" class="mx-auto">
           </a>
         </div>
