fixed preivacy and cookie headers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,7 +159,7 @@
     </div>
   
       
-       <div class="burger-menu color-set lg:!hidden">
+       <div class="burger-menu color-set xl:!hidden">
 
         <!-- <a href="/">
           <img class="mix-blend-multiply" style="max-width: min({{site.data.navigation.header_logo_width}}, 100%)" src="{{site.data.navigation.logo_image}}" alt="{{site.data.navigation.logo_alt}}">
